--- a/src/Filterbar.css
+++ b/src/Filterbar.css
@@ -1,13 +1,13 @@
-.Filterbar_Column{
+.filterbar {
     height: 10vh;
     border-radius: 2px;
     /* border-style: ridge; */
-    border-color:#EEEFEF;
+    border-color: #EEEFEF;
     display: flex;
     flex-direction: row;
 }
 
-.Column1{
+.filterbar_column1 {
     /* background-color: blueviolet; */
     width: 20%;
     height: 100%;
@@ -16,14 +16,13 @@
     align-items: center;
 }
 
-.Column1_Cirleicon{
+.filterbar_column1_cirleicon {
     color: #C3CAD9;
     font-size: large;
     margin: 5px;
 }
 
-.Column2{
-    /* background-color:yellow; */
+.filterbar_column2 {
     width: 55%;
     display: flex;
     flex-direction: row;
@@ -31,11 +30,11 @@
     align-items: center;
 }
 
-.Column2_inner1,
-.Column2_inner2,
-.Column2_inner3,
-.Column2_inner4{
-   
+.filterbar_column2_inner1,
+.filterbar_column2_inner2,
+.filterbar_column2_inner3,
+.filterbar_column2_inner4 {
+
     background-color: white;
     width: 100px;
     height: 30px;
@@ -49,26 +48,26 @@
 
 }
 
-.Column2_inner1_Filter,
-.Column2_inner2_Search,
-.Column2_inner3_Edit,
-.Column2_inner4_Delete{
+.filterbar_column2_inner1_filtericon,
+.filterbar_column2_inner2_searchicon,
+.filterbar_column2_inner3_editicon,
+.filterbar_column2_inner4_deleteicon {
     color: #C3CAD9;
     font-size: large;
     padding-top: 3px;
 }
 
-.Column1 label,
-.Column2_inner1 label,
-.Column2_inner2 label,
-.Column2_inner3 label,
-.Column2_inner4 label{
-    color:#8298c2;
+.filterbar_column1 label,
+.filterbar_column2_inner1 label,
+.filterbar_column2_inner2 label,
+.filterbar_column2_inner3 label,
+.filterbar_column2_inner4 label {
+    color: #8298c2;
     padding-left: 5px;
     padding-top: 2px;
 }
 
-.Column3{
+.filterbar_column3 {
     /* background-color: tomato; */
     width: 25%;
     display: flex;
@@ -77,11 +76,11 @@
     align-items: center;
 }
 
-.Column3_Menuicon,
-.Column3_CgMenuicon,
-.Column3_Listicon{
+.filterbar_column3_menuicon,
+.filterbar_column3_cgmenuicon,
+.filterbar_column3_listicon {
     background-color: white;
-    width:10%;
+    width: 10%;
     border-radius: 2px;
     padding: 6px;
     font-size: large;
