--- a/src/Otp.css
+++ b/src/Otp.css
@@ -1,5 +1,5 @@
-.Outer {
-    background-color: #e1e3eb;
+.otp_outer {
+    background-color: #0033ff;
     height: 100vh;
     width: 100%;
     display: flex;
@@ -8,22 +8,21 @@
     justify-content: center;
 }
 
-.Inner {
+.otp_inner {
     background-color: #ffffff;
     min-width: 30%;
     display: flex;
     flex-direction: column;
 }
 
-.Inner_row1 {
-    /* background-color: yellow; */
+.otp_inner_row1 {
     margin-bottom: 60px;
     padding-left: 15px;
     padding-top: 10px;
     padding-bottom: -10px;
 }
 
-.Inner_row1 h2 {
+.otp_inner_row1 h2 {
     display: flex;
     color: grey;
     font-family: sans-serif;
@@ -31,8 +30,7 @@
     padding-left: 15px;
 }
 
-.Inner_row2 {
-    /* background-color: blueviolet;  */
+.otp_inner_row2 {
     margin-bottom: 50px;
     margin-top: -60px;
     padding: 10px;
@@ -40,7 +38,7 @@
     margin-right: 20px;
 }
 
-.Inner_row2 input {
+.otp_inner_row2 input {
     padding-left: 50px;
     margin-left: 6px;
     width: 90%;
@@ -50,15 +48,14 @@
     outline: none;
 }
 
-.Inner_row3 {
-    /* background-color: brown; */
+.otp_inner_row3 {
     margin-top: -45px;
     margin-bottom: 20px;
     display: flex;
     flex-direction: row;
 }
 
-.Inner_row3 button {
+.otp_inner_row3 button {
     width: 80%;
     padding: 10px;
     border: none;
