--- a/src/Signup.css
+++ b/src/Signup.css
@@ -1,9 +1,5 @@
-body {
-    margin: 0;
-}
-
 .signup_outer {
-    background-color: rgb(210, 203, 241);
+    background-color: #f4f5f4;
     height: 100vh;
     width: 100%;
     display: flex;
@@ -11,7 +7,7 @@ body {
     align-items: center;
 }
 
-.signup_outer_inner {
+.signup_inner {
     height: 75vh;
     max-width: 400px;
     width: 90%;
@@ -19,8 +15,7 @@ body {
     border-radius: 8px;
 }
 
-.signup_outer_inner_row1 {
-    /* background-color: aquamarine; */
+.signup_inner_row1 {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -28,12 +23,12 @@ body {
     padding: 1px;
 }
 
-.signup_outer_inner_row1 h2 {
+.signup_inner_row1 h2 {
     margin-left: 2px;
     color: rgb(56, 51, 51);
 }
 
-.signup_outer_inner_row2 {
+.signup_inner_row2 {
     margin-top: -10px;
     margin-left: 25px;
     margin-right: 25px;
@@ -41,13 +36,13 @@ body {
     flex-direction: row;
 }
 
-.Handicon{
-    margin-top: 26px; 
+.signup_inner_row2_handicon {
+    margin-top: 26px;
     color: #ECB476;
     margin-left: 5px
 }
 
-.signup_outer_inner_row3 {
+.signup_inner_row3 {
     margin-top: -15px;
     margin-bottom: 20px;
     margin-left: 25px;
@@ -55,15 +50,15 @@ body {
     color: rgb(175, 160, 160);
 }
 
-.signup_outer_inner_row4 {
+.signup_inner_row4 {
     width: 95%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
 
-.signup_outer_inner_row4_left input,
-.signup_outer_inner_row4_right input {
+.signup_inner_row4_left input,
+.signup_inner_row4_right input {
     margin-left: 25px;
     margin-right: 25px;
     width: 70%;
@@ -73,14 +68,14 @@ body {
     outline: none;
 }
 
-.signup_outer_inner_row4_right input{
+.signup_inner_row4_right input {
     margin-left: 8px;
     padding-right: 25px;
 }
 
-.signup_outer_inner_row5,
-.signup_outer_inner_row6,
-.signup_outer_inner_row7 {
+.signup_inner_row5,
+.signup_inner_row6,
+.signup_inner_row7 {
 
     margin-left: 25px;
     margin-right: 15px;
@@ -88,9 +83,10 @@ body {
     display: flex;
     flex-direction: row;
 }
-.signup_outer_inner_row5 input,
-.signup_outer_inner_row6 input,
-.signup_outer_inner_row7 input {
+
+.signup_inner_row5 input,
+.signup_inner_row6 input,
+.signup_inner_row7 input {
     padding-left: 50px;
     width: 90%;
     padding: 10px;
@@ -99,7 +95,7 @@ body {
     outline: none;
 }
 
-.signup_outer_inner_row8 {
+.signup_inner_row8 {
     margin-left: 30px;
     margin-right: 30px;
     margin-top: 20px;
@@ -107,26 +103,25 @@ body {
     flex-direction: row;
 }
 
-.signup_outer_inner_row8 input{
+.signup_inner_row8 input {
     margin-left: 10px;
 }
 
-.Checkboxicon{
-    /* background-color: aqua; */
+.signup_inner_row8_checkboxicon {
     padding-right: 6px;
     padding-top: 5px;
 }
 
-.signup_outer_inner_row8 text {
+.signup_inner_row8 text {
     display: flex;
     flex-direction: column;
 }
 
-.signup_outer_inner_row8 span {
+.signup_inner_row8 span {
     color: blueviolet;
 }
 
-.signup_outer_inner_row9 {
+.signup_inner_row9 {
     padding-top: 10px;
     display: flex;
     flex-direction: row;
@@ -134,7 +129,7 @@ body {
     justify-content: center;
 }
 
-.signup_outer_inner_row9 button {
+.signup_inner_row9 button {
     margin-top: 5px;
     padding: 10px;
     width: 90%;
