--- a/src/Otp.css
+++ b/src/Otp.css
@@ -1,5 +1,5 @@
 .otp_outer {
-    background-color: #0033ff;
+    background-color: #0000002a;
     height: 100vh;
     width: 100%;
     display: flex;
