--- a/frontend/src/AdminDash.css
+++ b/frontend/src/AdminDash.css
@@ -34,24 +34,30 @@
     width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-between;
     padding-right: 40px;
 }
 
 .Admin_page_contentpart_main_row2_innerrow1 {
+    /* background-color: blueviolet; */
     display: flex;
     flex-direction: row;
     justify-content: center;
+    align-items: center;
     padding-right: 60px;
     margin-right: 20px;
+    margin-left: 40px;
 }
 
 .Admin_page_contentpart_main_row2_innerrow2 {
+    /* background-color: aqua; */
     padding-top: 50px;
     padding-bottom: 0;
     padding-left: 40px;
     padding-right: 40px;
-    margin-right: 80px;
+    margin-right: 40px;
+    margin-left: 50px;
+
 }
 
 
