--- a/frontend/src/components/Horizontalbar.css
+++ b/frontend/src/components/Horizontalbar.css
@@ -1,5 +1,5 @@
 .Horizontalbar_main {
-    background-color: #fafafa;
+    background-color: #f3f3f4;
     /* background-color: aqua; */
     min-width: 200px;
     margin-top: 50px;
@@ -26,10 +26,12 @@
 }
 
 .Horizontalbar_main_row2 {
+    /* background-color: #FE7E08; */
     display: flex;
     flex-direction: row;
     /* margin-left: 30px; */
     padding-top: 30px;
+    padding-bottom: 20px;
     font-size: x-large;
     color: gray;
     font-family: Arial, Helvetica, sans-serif;
@@ -53,6 +55,8 @@
     color: rgb(15, 154, 15);
 }
 
+
+
 .Horizontalbar_graph ul {
     display: flex;
     flex-direction: column;
@@ -65,7 +69,7 @@
 }
 
 .Horizontalbar_graph li {
-    background-color: #f7f8fa;
+    background-color: #f3f3f4;
     display: flex;
     height: 50px;
     /* padding: 5px; */
@@ -94,7 +98,7 @@
     background-color: #29CC39;
     height: 5px;
     width: 30%;
-    margin-left: 30px;
+    margin-left: 25px;
     border-radius: 20px;
 }
 
@@ -102,7 +106,7 @@
     background-color: #052DFF;
     height: 5px;
     width: 15%;
-    margin-left: 35px;
+    margin-left: 20px;
     border-radius: 20px;
 }
 
