--- a/frontend/src/components/Progressbar.css
+++ b/frontend/src/components/Progressbar.css
@@ -3,7 +3,7 @@
     width: 100%;
 }
 .Progressbarouter_inner{
-    background-color: #f7f8fa;
+    background-color: #f3f3f4;
     min-width: 100px;
     /* background-color: blueviolet; */
     border-radius: 5px;
@@ -15,13 +15,13 @@
 .Progressbarouter_inner_row1 label{
     font-size: 12px;
     color: #4D5E80;
+    font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
    
 }
 .Progressbarmore{
     margin: 0px 0px -4px 35px;
-
-
+    color: #4D5E80;
 }
 .Progressbarouter_inner_row2 img{
     width: 87px;
