--- a/frontend/src/components/Summary.css
+++ b/frontend/src/components/Summary.css
@@ -28,10 +28,20 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.summary_row1 .icon{
+    color: #4D5E80;
+}
+
 .summary_row1 label{
     font-family: Arial, Helvetica, sans-serif;
     color: #4D5E80;
 }
+
+.summarycount_label{
+    color: #4D5E80;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 
 .summary_row {
     /* background-color: crimson; */
@@ -50,11 +60,12 @@
 
 .summary_single {
     font-size: 1rem;
-    background-color: rgb(242, 247, 248);
+    /* background-color: rgb(242, 247, 248); */
+    background-color: #f3f3f4;
     padding-top: 5%;
     height: 30px;
     width: 40px;
-    color: #6b7a99;
+    color: #4D5E80;
     display: flex;
     flex-direction: column;
     font-size: x-small;
