--- a/frontend/src/components/SummaryCount.css
+++ b/frontend/src/components/SummaryCount.css
@@ -5,7 +5,7 @@
 }
 
 .summarycount_inner {
-    background-color: #f7f8fa;
+    background-color: #f3f3f4;
     min-width: 100px;
     width: 10%;
     display: flex;
@@ -19,11 +19,14 @@
     background-color: aliceblue;
     display: flex;
     flex-direction: row;
+    font-family: Arial, Helvetica, sans-serif;
+
 }
 
 .summarycount_inner label{
     color: #4D5E80;
     font-family: Arial, Helvetica, sans-serif;
+    /* font-weight: bold; */
 }
 
 .summarycount_inner_row1 {
@@ -34,8 +37,6 @@
 }
 
 .summarycount_inner_row2 {
-    color: gray;
     font-size: x-large;
-    /* font-weight: bold; */
     font-family: Arial, Helvetica, sans-serif;
 }
