--- a/frontend/src/AdminPage/components/Bargraph.css
+++ b/frontend/src/AdminPage/components/Bargraph.css
@@ -1,101 +1,111 @@
-.bargraph {
-    /* background-color: yellowgreen; */
-    margin-top: 50px;
-    margin-left: 50px;
+.bargraph1_top {
+    margin-top: 55px;
     background-color: #f3f3f4;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 20px;
-    width: 30%;
-    min-width: 150px;
     border-radius: 10px;
+    margin-left: 100px;
+    height: 50vh;
+    width: 90%;
 }
 
-.bargraph_title label,
-.bargraph_title .icon{
+.bargraph1_title {
+    padding-top: 10px;
+    padding-left: 30px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.bargraph1_title .icon{
+    margin-top:10px;
+    padding-left: 50px;
+}
+
+.bargraph1_title label,
+.bargraph1_title .icon{
     color: #6b7a99;
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.bargraph_graph{
-    /* background-color: aqua; */
+.bargraph1_graph{
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
 }
 
-.bargraph .icon {
-    padding-left: 20px;
+.bargraph1 .icon {
+    margin-top: 5px;
+    padding-left: 45px;
     color: #4D5E80;
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.bargraph_graph ul {
+.bargraph1_graph ul {
     display: flex;
     flex-direction: row;
     list-style-type: none;
     justify-content: space-between;
-    padding: 0;
-    margin: 0;
+    /* align-items: center;
+    justify-content: center; */
 }
 
-.bargraph_graph li {
+.bargraph1_graph li {
+    /* background-color: aqua; */
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: flex-end;
+    margin-bottom: 20px;
+    align-items: center;
+    margin-right: 30px;
 }
 
-/* .bargraph_graph label{
-    justify-content: space-between;
-    color: gray;
-} */
-
-
-.bargraph_blue_value {
+.bargraph1_blue_value {
     color: blue;
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.bargraph_green_value {
+.bargraph1_green_value {
     color: green;
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.bargraph_orange_value {
+.bargraph1_orange_value {
     color: orangered;
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.bargraph_blue_name,
-.bargraph_green_name,
-.bargraph_orange_name,
-.bargraph_title label{
+.bargraph1_blue_name,
+.bargraph1_green_name,
+.bargraph1_orange_name,
+.bargraph1_title label{
     color: #4D5E80;
     font-weight: bold;
+    font-size: medium;
     font-family: Arial, Helvetica, sans-serif;
 }
 
 
-.bargraph_bluegraph {
+.bargraph1_bluegraph {
     background-color: blue;
     width: 25px;
     margin-top: 5px;
     margin-bottom: 10px;
 }
 
-.bargraph_greengraph {
+.bargraph1_greengraph {
     background-color: green;
     width: 25px;
     margin-top: 10px;
     margin-bottom: 10px;
 }
 
-.bargraph_orangegraph {
+.bargraph1_orangegraph {
     background-color: orangered;
     width: 25px;
     margin-top: 10px;
