--- a/frontend/src/AdminPage/components/Horizontalbar.css
+++ b/frontend/src/AdminPage/components/Horizontalbar.css
@@ -1,63 +1,84 @@
-.Horizontalbar_main {
+/* .Horizontalbar_main {
     background-color: #f3f3f4;
-    /* background-color: aqua; */
+    background-color: #FE7E08;
     min-width: 200px;
     margin-top: 50px;
     padding-left: 30px;
     padding-bottom: 30px;
     padding-top: 30px;
     border-radius: 10px;
-    width: 30%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
+} */
+
+.Horizontalbar1_main_top{
+    margin-top: 5px;
+    background-color: #f3f3f4;
+    /* background-color: #29CC39; */
+    height: 48vh;
+    padding-top: 10px;
+    padding-left: 35px;
+    border-radius: 10px;
+    padding-right: 10px;
+    
 }
 
-.Horizontalbar_main_row1 {
+.Horizontalbar1_main{
+    background-color: #FE7E08;
+}
+
+
+.Horizontalbar1_main_row1 {
+    /* background-color: #29CC39; */
     display: flex;
     flex-direction: row;
-    /* justify-content:center; */
+    justify-content:space-between;
+    padding-right: 20px;
 }
 
-.Horizontalbar_main_row1 label{
+.Horizontalbar1_main_row1 label{
+    margin-top: 20px;
     color: #4D5E80;
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.Horizontalbar_main_row2 {
+.Horizontalbar1_main_row2 {
     /* background-color: #FE7E08; */
     display: flex;
     flex-direction: row;
     /* margin-left: 30px; */
     padding-top: 30px;
-    padding-bottom: 20px;
+    padding-bottom: 30px;
     font-size: x-large;
     color: gray;
     font-family: Arial, Helvetica, sans-serif;
     /* justify-content: center; */
 }
 
-.Horizontalbar_main_row2_right {
+.Horizontalbar1_main_row2_right {
     margin-left: 25px;
     font-size: medium;
     margin-top: 7px;
 }
 
-.Horizontalbar_main_row1_icon {
+.Horizontalbar1_main_row1_icon {
+    margin-top: 20px;
     margin-left: 50%;
     color: #4D5E80;
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.Horizontalbar_main_row2_right span {
+.Horizontalbar1_main_row2_right span {
     color: rgb(15, 154, 15);
 }
 
 
 
-.Horizontalbar_graph ul {
+.Horizontalbar1_graph ul {
     display: flex;
     flex-direction: column;
     padding: 0px;
@@ -68,7 +89,7 @@
     /* padding-bottom: 10px; */
 }
 
-.Horizontalbar_graph li {
+.Horizontalbar1_graph li {
     background-color: #f3f3f4;
     display: flex;
     height: 50px;
@@ -78,7 +99,7 @@
     align-items: center;
 }
 
-.Horizontalbar_graph label {
+.Horizontalbar1_graph label {
     padding-top: 0px;
     /* padding-bottom: 10px; */
     /* padding-left: 20px; */
@@ -86,7 +107,7 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.Horizontalbar_graph_orange {
+.Horizontalbar1_graph_orange {
     background-color: #FE7E08;
     height: 5px;
     /* width: 50%; */
@@ -94,7 +115,7 @@
     border-radius: 20px;
 }
 
-.Horizontalbar_graph_green {
+.Horizontalbar1_graph_green {
     background-color: #29CC39;
     height: 5px;
     width: 30%;
@@ -102,7 +123,7 @@
     border-radius: 20px;
 }
 
-.Horizontalbar_graph_blue {
+.Horizontalbar1_graph_blue {
     background-color: #052DFF;
     height: 5px;
     width: 15%;
@@ -110,7 +131,7 @@
     border-radius: 20px;
 }
 
-.Horizontalbar_graph label{
+.Horizontalbar1_graph label{
     color: #4D5E80;
     font-weight: bold;
 }
