--- a/frontend/src/AdminPage/components/List.css
+++ b/frontend/src/AdminPage/components/List.css
@@ -1,6 +1,7 @@
-.list{
-    margin-right: -2px;
-    margin-top: 10px;
+.list_main{
+    /* background-color: chocolate; */
+    /* margin-right: 100px; */
+    margin-top: 15px;
     border-radius: 5px;
     background-color: #F7F8FA;
     display: flex;
