--- a/frontend/src/AdminPage/components/Progressbar.css
+++ b/frontend/src/AdminPage/components/Progressbar.css
@@ -2,17 +2,19 @@
     margin-top: 20px;
     width: 100%;
 }
-.Progressbarouter_inner{
+.Progressbarouter_inner_top{
     background-color: #f3f3f4;
     min-width: 100px;
     /* background-color: blueviolet; */
     border-radius: 5px;
-    width: 95%;
-    padding: 6px;
- 
+    width: 100%;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    margin-left: 5px;
 }
 
 .Progressbarouter_inner_row1 label{
+    margin-left: 20px;
     font-size: 12px;
     color: #4D5E80;
     font-weight: bold;
