--- a/frontend/src/AdminPage/components/SummaryCount.css
+++ b/frontend/src/AdminPage/components/SummaryCount.css
@@ -1,16 +1,19 @@
 .summarycount_outer {
+    /* background-color: black; */
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.summarycount_inner {
+.summarycount_inner_main {
     background-color: #f3f3f4;
+    /* background-color: yellow; */
     min-width: 100px;
-    width: 10%;
+    width: 25%;
     display: flex;
     flex-direction: column;
-    padding: 35px;
+    padding: 45px;
+    margin-top: -20px;
     border-radius: 5px;
 }
 
