--- a/frontend/src/AdminPage/components/Topbar.css
+++ b/frontend/src/AdminPage/components/Topbar.css
@@ -118,7 +118,6 @@ body {
 
 .Topbar_BellIcon,
 .Topbar_cancelIcon {
-
     color: #b7c2d7;
 }
 
@@ -134,8 +133,10 @@ body {
 
     margin-left: 70px;
     margin-top: -24px;
-    font-weight: 00px;
-    color: #6B7A99
+    font-weight: bold;
+    color: #6B7A99;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: medium;
 }
 
 .Topbar_col5 {
