--- a/frontend/src/ManagerPage/ManagerDash.css
+++ b/frontend/src/ManagerPage/ManagerDash.css
@@ -13,6 +13,7 @@
 }
 
 .ManagerDash_page_content_area_row1{
+    /* background-color: darkblue; */
     display: flex;
     flex-direction: row;
     width: 100%;
@@ -26,16 +27,16 @@
     width: 100%;
     display: flex;
     flex-direction: row;
-    margin-left: 150px;
-    padding-left: 80px;
+    margin-left: 50px;
+    padding-left: 50px;
 }
 
 .ManagerDash_page_content_area_row2_bars{
     /* background-color: brown; */
-    padding-top: 50px;
+    padding-top: 40px;
     padding-bottom: 0;
     padding-left: 50px;
     padding-right: 50px;
     margin-right: 50px;
-    margin-left: 200px;
+    margin-left: 70px;
 }
