--- a/frontend/src/ManagerPage/components/Horizontalbar.css
+++ b/frontend/src/ManagerPage/components/Horizontalbar.css
@@ -1,5 +1,6 @@
 .Horizontalbar_main {
     background-color: #f3f3f4;
+    margin-right: 300px;
     /* background-color: aqua; */
     min-width: 200px;
     margin-top: 50px;
@@ -7,19 +8,21 @@
     padding-bottom: 30px;
     padding-top: 30px;
     border-radius: 10px;
-    width: 30%;
+    width: 62%;
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
 
 .Horizontalbar_main_row1 {
+    /* background-color: aqua; */
     display: flex;
     flex-direction: row;
     /* justify-content:center; */
 }
 
 .Horizontalbar_main_row1 label{
+    /* background-color: #29CC39; */
     color: #4D5E80;
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
