--- a/frontend/src/ManagerPage/components/Progressbar.css
+++ b/frontend/src/ManagerPage/components/Progressbar.css
@@ -8,7 +8,8 @@
     /* background-color: blueviolet; */
     border-radius: 5px;
     width: 95%;
-    padding: 6px;
+    padding: 7px;
+    padding-top: 15px;
  
 }
 
