--- a/frontend/src/ManagerPage/components/Summary.css
+++ b/frontend/src/ManagerPage/components/Summary.css
@@ -4,8 +4,8 @@
     border: 1px solid #95aac7;
     border-radius: 15px;
     /* height: 30%; */
-    margin-top: 10%;
-    width: 50%;
+    margin-top: 7%;
+    width: 60%;
     margin-left: 25%;
     margin-bottom: 10%;
     padding-bottom: 10px;
@@ -29,6 +29,7 @@
 }
 
 .summary_row1 .icon{
+    margin-right: 40px;
     color: #4D5E80;
 }
 
@@ -45,7 +46,7 @@
 
 .summary_row {
     /* background-color: crimson; */
-    width: 100%;
+    width: 120%;
     display: flex;
     flex-direction: row;
     /* padding: 5px 5%; */
@@ -60,6 +61,7 @@
 
 .summary_single {
     font-size: 1rem;
+    /* background-color: chartreuse; */
     /* background-color: rgb(242, 247, 248); */
     background-color: #f3f3f4;
     padding-top: 5%;
@@ -73,7 +75,7 @@
     border-radius: 10px;
     border: 1px solid #f7f8fa;
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-    padding: 30px;
+    padding: 40px;
     align-items: center;
     justify-content: space-evenly;
     margin: 2px;
@@ -82,8 +84,13 @@
 
 .summary_value {
     /* background-color: black; */
+    margin-bottom: 10px;
     font-size: 1rem;
     font-weight: bold;
     margin-top: 10px;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+/* .summary_single_title{
+    background-color: yellow;
+} */
