--- a/frontend/src/ManagerPage/components/SummaryCount.css
+++ b/frontend/src/ManagerPage/components/SummaryCount.css
@@ -5,12 +5,13 @@
 }
 
 .summarycount_inner {
+    /* background-color: black; */
     background-color: #f3f3f4;
     min-width: 100px;
-    width: 10%;
+    width: 100%;
     display: flex;
     flex-direction: column;
-    padding: 35px;
+    padding: 45px;
     border-radius: 5px;
 }
 
